tests/neg/i12245.scala
package dotty.tools.dotc.core

def round(f: Float, digits: Int = 0): Float = ???
//@scala.annotation.targetName("roundDouble") // does not change anything
def round(d: Double, digits: Int = 0): Double = ???  // error
